# WARNING: head commit changed in the meantime
2019/07/18 16:53

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     <div class="content">
         会社情報
         <div class="sub header">
-            わたしたちの会社はとてもすばらしい
+            私たちの会社はとてもすばらしい
         </div>
     </div>
 </div>
