--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -8,7 +8,7 @@
 <form th:action="@{/}" method="get">
 	<p th:text="'本文詳細'"></p>
 	<p th:text="${text}"></p>
-	<button type="submit">戻るよ</button>
+	<button type="submit">戻る</button>
 </form>
 </body>
 </html>
