--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -3,12 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" href="./css/semantic.min.css">
+<link rel="stylesheet" href="./css/skyblue.css">
+<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+<script src="js/semantic.min.js"></script>
 </head>
 <body>
+<div class="ui text container">
 <form th:action="@{/}" method="get">
-	<p th:text="'本文詳細'"></p>
-	<p th:text="${text}"></p>
-	<button type="submit">戻る</button>
+<table class="ui celled striped table">
+	<thead>
+	<tr>
+	<th><p th:text="'本文詳細'"></p></th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+	<td><p th:text="${text}"></p><td>
+	</tr>
+	</tbody>
+	</table>
+	<button class="ui button" type="submit">戻る</button>
 </form>
+</div>
 </body>
 </html>
