--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,7 @@ ${paging.totalRecordNum} + '件中'
 		<!-- 見出し。ここも可変になるように後々はしたい -->
 		<thead>
 		<tr>
+			<th class="center"><strong>日付</strong></th>
 			<th class="center"><strong>送信者</strong></th>
 			<th class="center"><strong>件名</strong></th>
 			<th></th>
@@ -41,6 +42,7 @@ ${paging.totalRecordNum} + '件中'
 		</thead>
 		<!-- DB内の表示、ここも可変になるように後々はしたい -->
 		<tr th:each="list : ${test}" th:object="${list}">
+			<td th:text="*{date}"></td>
 			<td th:text="*{sender}"></td>
 			<td th:text="*{subject}"></td>
 			<td>
@@ -49,7 +51,7 @@ ${paging.totalRecordNum} + '件中'
 		</tr>
 		<tfoot>
   <tr>
-    <th colspan="3">
+    <th colspan="4">
       <div class="ui pagination small menu">
         <a class="icon item"
            th:classappend="!${paging.canGoFirst} ? 'disabled'"
