--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,6 +45,7 @@ ${paging.totalRecordNum} + '件中'
 		</tr>
 		</thead>
 		<!-- DB内の表示、ここも可変になるように後々はしたい -->
+		<tbody>
 		<tr th:each="list : ${test}" th:object="${list}">
 			<td th:text="*{date}"></td>
 			<td th:text="*{cost}"></td>
@@ -55,9 +56,10 @@ ${paging.totalRecordNum} + '件中'
 			<button type="submit" name="hidden" class="mini ui button" th:value="*{text}" >本文詳細</button>
 			</td>
 		</tr>
+		</tbody>
 		<tfoot>
   <tr>
-    <th colspan="3">
+    <th colspan="6">
       <div class="ui pagination small menu">
         <a class="icon item"
            th:classappend="!${paging.canGoFirst} ? 'disabled'"
