戻るを押したとき、1ページ目に自動的に戻ってしまうバグを修正 by高野

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,6 +90,7 @@ ${paging.totalRecordNum} + '件中'
   </tr>
   </tfoot>
 	</table>
+			<input type="hidden" name="page" th:value="${paging.currentPageNum}">
 	</form>
 	</div>
 </body>
