--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="ui text container">
-<form th:action="@{/}" method="get">
+<form th:action="@{/}" method="post">
 <table class="ui single line table">
   <thead>
     <tr>
@@ -22,7 +22,7 @@
     </tr>
   </tbody>
 </table>
-<button class="ui button" type="submit">戻る</button>
+<button class="ui button" type="submit" name="fromdisplay" th:value="*{page}">戻る</button>
 </form>
 </div>
 </body>
