--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,9 +27,12 @@ ${paging.totalRecordNum} + '件中'
   			<input name=freeword type="text" placeholder="Search...">
 			</div>
             <button type="submit" name="search" class="ui primary button">検索</button>
+            <form th:action="@{/ascdate}" th:object="${test}" method="post">
     <button type="submit" name="search" class="mini ui button">日付昇順</button>
+    </form>
+     <form th:action="@{/descdate}" th:object="${test}" method="post">
     <button type="submit" name="search" class="mini ui button">日付降順</button>
-
+	</form>
 <div class="ui divider"></div>
 	<form th:action="@{/result}" th:object="${test}" method="post">
 	<table class="ui compact celled table" style="font-size: 9.5pt;">
