ページングしたときに検索結果を保持した状態で遷移することに成功 by高野

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="ui text container">
 	<div class="ui header">
-    <a class="logo" href="index.html"><img src="./img/ShanteryLogo.jpg" alt="シャンテリーロゴ"></a>
+    <a class="logo" href="/"><img src="./img/ShanteryLogo.jpg" alt="シャンテリーロゴ"></a>
     <div class="content">
     	メール検索
         <div class="sub header">
