--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="ui text container">
 	<div class="ui header">
-    <a class="logo" href="index.html"><img src="./img/ShanteryLogo.jpg" alt="シャンテリーロゴ"></a>
+    <a class="logo" href="/"><img src="./img/ShanteryLogo.jpg" alt="シャンテリーロゴ"></a>
     <div class="content">
     	メール検索
         <div class="sub header">
@@ -63,7 +63,6 @@ ${paging.totalRecordNum} + '件中'
   <tr>
     <th colspan="6">
       <div class="ui pagination small menu">
-      <input type="hidden" name="sWord" th:value="${sword}">
         <a class="icon item"
            th:classappend="!${paging.canGoFirst} ? 'disabled'"
            th:href="${paging.firstHref}"><i class="angle double left icon"></i></a>
@@ -98,6 +97,9 @@ ${paging.totalRecordNum} + '件中'
 	</div>
 	<div th:if="${paging.currentPageNum != null}">
 	 	<input type="hidden" name="page" th:value="${paging.currentPageNum}">
+	</div>
+	<div th:if="${sword != null}">
+      <input type="hidden" name="keepword" th:value="${sword}">
 	</div>
 	</form>
 	</div>
