--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -23,16 +23,39 @@ ${paging.totalRecordNum} + '件中'
 + ${paging.fromRecordNum} + '～'
 + ${paging.toRecordNum} + '件表示中'">100件中1～10件表示中</p>
 <strong>FreeWord：</strong>
-<form th:action="@{/sresults}" th:object="${searching}" method="post">
-            <div class="ui input focus">
-  			<input name=sWord type="text"  placeholder="Search...">
+		<form th:action="@{/sresults}" th:object="${searching}" method="post">
+			<div class="ui input focus">
+				<input name=sWord type="text" placeholder="Search...">
 			</div>
-            <button type="submit" name="search" class="ui primary button">検索</button>
-            </form>
-    <button type="submit" name="search" class="mini ui button">日付昇順</button>
-    <button type="submit" name="search" class="mini ui button">日付降順</button>
-
-<div class="ui divider"></div>
+			<button type="submit" name="search" class="ui primary button">検索</button>
+		</form>
+		<div style="display:inline-flex">
+		<form th:action="@{/resultascdate}" th:object="${ascdating}"
+			style="margin: 0px" method="post">
+			<button type="submit" name="ascdate" class="mini ui button">日付昇順</button>
+		</form>
+		<form th:action="@{/resultdescdate}" th:object="${descdating}"
+			 method="post">
+			<button type="submit" name="descdate" class="mini ui button">日付降順</button>
+		</form>
+		<form th:action="@{/resultasccost}" th:object="${ascosting}"
+			method="post">
+			<button type="submit" name="asccost" class="mini ui button">単額昇順</button>
+		</form>
+		<form th:action="@{/resultdesccost}" th:object="${descosting}"
+			method="post">
+			<button type="submit" name="desccost" class="mini ui button">単額降順</button>
+		</form>
+		<form th:action="@{/resultascage}" th:object="${ascageing}"
+			method="post">
+			<button type="submit" name="ascage" class="mini ui button">年齢昇順</button>
+		</form>
+		<form th:action="@{/resultdescage}" th:object="${descageing}"
+			method="post">
+			<button type="submit" name="descage" class="mini ui button">年齢降順</button>
+		</form>
+		</div>
+		<div class="ui divider"></div>
 	<form th:action="@{/result}" th:object="${test}" method="post">
 	<table class="ui compact celled table" style="font-size: 9.5pt;">
 		<!-- 見出し。ここも可変になるように後々はしたい -->
