--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -6,6 +6,11 @@
 <link rel="stylesheet" href="./css/semantic.min.css">
 <script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/semantic.min.js"></script>
+<style>
+a.disabled{
+    pointer-events: none;
+}
+</style>
 </head>
 <body>
 	<div class="ui text container">
