--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -15,7 +15,7 @@
 		<table class="ui single line table">
 			<thead>
 				<tr>
- 					<th><p th:text="'本文詳細'"></p></th>
+ 					<th><p th:text="#{view.btn.details}"></p></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -25,7 +25,7 @@
 			</tbody>
 		</table>
 		<input type="hidden" name="keepword" th:value="${word}">
-		<button class="ui button" type="submit" name="fromdisplay" th:value="*{page}">戻る</button>
+		<button class="ui button" type="submit" name="fromdisplay" th:value="*{page}"><p th:text="#{view.btn.return}"></p></button>
 	</form>
 </div>
 </body>
