--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Result2</title>
+<title th:text="#{view.index.title}"></title>
 <link rel="stylesheet" href="./css/semantic.min.css">
 <script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/semantic.min.js"></script>
@@ -18,7 +18,8 @@ a.disabled {
 		<div class="ui header">
 			<a class="logo" href="/"><img src="./img/ShanteryLogo.jpg"
 				alt="シャンテリーロゴ"></a>
-			<div class="content"><br>
+			<div class="content">
+			<p th:text="#{view.label.searchtitle}">
 				<div class="sub header" th:text="#{view.label.casefacter}"></div>
 			</div>
 		</div>
