--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Result2 検索結果</title>
+<title th:text="#{view.searchResults.title}"></title>
 <link rel="stylesheet" href="./css/semantic.min.css">
 <script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/semantic.min.js"></script>
@@ -17,7 +17,7 @@ a.disabled{
 	<div class="ui header">
     <a class="logo" href="/"><img src="./img/ShanteryLogo.jpg" alt="シャンテリーロゴ"></a>
     <div class="content">
-    	メール検索
+    	<p th:text="#{view.label.searchtitle}">
         <div class="sub header" th:text="#{view.label.casefacter}">
         </div>
     </div>
