--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,17 +64,22 @@ ${paging.totalRecordNum} + '件中'
 				<!-- 見出し。ここも可変になるように後々はしたい -->
 				<thead>
 					<tr>
-						<th class="center" th:text="#{view.tablelabel.date}"></th>
+						<th:bloack th:each="list : ${head}">
+						<!-- <th class="center" th:text="#{view.tablelabel.date}"></th>
 						<th class="center" th:text="#{view.tablelabel.cost}"></th>
 						<th class="center" th:text="#{view.tablelabel.age}"></th>
 						<th class="center" th:text="#{view.tablelabel.sender}"></th>
 						<th class="center" th:text="#{view.tablelabel.subject}"></th>
-						<th></th>
+						<th></th> -->
+						<th th:text="${list}"></th>
 					</tr>
 				</thead>
 				<!-- DB内の表示、ここも可変になるように後々はしたい -->
-				<tbody>
+				<tbody><!--
 					<tr th:each="list : ${test}" th:object="${list}">
+						<th:block th:each="nakami, stat: ${list}">
+							<td th:if="${stat.index < 3}"  th:text="${nakami}"></td>
+						</th:block>
 						<td th:text="*{date}"></td>
 						<td th:text="*{cost}"></td>
 						<td th:text="*{age}"></td>
@@ -84,7 +89,7 @@ ${paging.totalRecordNum} + '件中'
 							<button type="submit" name="hidden" class="mini ui button"
 								th:value="*{text}"><p th:text="#{view.btn.details}"></p></button>
 						</td>
-					</tr>
+					</tr> -->
 				</tbody>
 				<tfoot>
 					<tr>
