--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@ ${paging.totalRecordNum} + '件中'
 				<!-- 見出し。ここも可変になるように後々はしたい -->
 				<thead>
 					<tr>
-						<th:bloack th:each="list : ${head}">
+						<th:bloack th:each="list, stat: ${head}">
 						<!-- <th class="center" th:text="#{view.tablelabel.date}"></th>
 						<th class="center" th:text="#{view.tablelabel.cost}"></th>
 						<th class="center" th:text="#{view.tablelabel.age}"></th>
@@ -75,12 +75,12 @@ ${paging.totalRecordNum} + '件中'
 					</tr>
 				</thead>
 				<!-- DB内の表示、ここも可変になるように後々はしたい -->
-				<tbody><!--
+				<tbody>
 					<tr th:each="list : ${test}" th:object="${list}">
 						<th:block th:each="nakami, stat: ${list}">
-							<td th:if="${stat.index < 3}"  th:text="${nakami}"></td>
+							<td th:text="${nakami}"></td>
 						</th:block>
-						<td th:text="*{date}"></td>
+						<!-- <td th:text="*{date}"></td>
 						<td th:text="*{cost}"></td>
 						<td th:text="*{age}"></td>
 						<td th:text="*{sender}"></td>
@@ -88,12 +88,12 @@ ${paging.totalRecordNum} + '件中'
 						<td style="text-align: center;">
 							<button type="submit" name="hidden" class="mini ui button"
 								th:value="*{text}"><p th:text="#{view.btn.details}"></p></button>
-						</td>
-					</tr> -->
+						</td> -->
+					</tr>
 				</tbody>
 				<tfoot>
 					<tr>
-						<th colspan="6">
+						<th colspan="11">
 							<div class="ui pagination small menu">
 								<div th:if="!${paging.canGoFirst}"></div>
 								<a class="icon item"
